--- a/songs.html
+++ b/songs.html
@@ -300,7 +300,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 9: Songs for Women - Frank Ocean
+          Week 10: Rollinem 7's - N.E.R.D
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -310,20 +310,19 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.4/10</h2>
+            <h2 id="rating">Overall Rating: 7.4/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/4p1Er46wDz4zGQI7Sxor3W?si=675ec49a1a6440cf"
+              href="https://open.spotify.com/track/5hIg7J1i50XLG7bPKQM6O5?si=1355b0c750e847ee"
               target="_blank"
-              hidden
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=1vpeQEKDpKQ"
+              href="https://www.youtube.com/watch?v=poMoJP0TPeg"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
-            <div id="newFeature">
+            <div id="newFeature" hidden>
               <h2>Rate this song!</h2>
               <div class="slidecontainer">
                 <center>
@@ -370,51 +369,39 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I indeed have a favorite verse/stanza from this song and it is as
-              follows (second chorus): "And every time a n**** ask if I sing
-              songs to get at women, I say nah, he said: 'who do you think
-              you're kidding, I know you, you stole my girlfriend.'" This line
-              concludes the little narrative that Frank tells throughout the
-              song, and is a pretty enjoyable conclusion at that.
+              Both of Pharrell's short verses break up the overly repetitive
+              chorus in a way that makes this song as enjoyable as it is. I also
+              thoroughly enjoy the anomalous nature of Andre 3000's finishing
+              verse.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              *DISCLAIMER* Please don't get too attached to this song like I
-              have, it is not on ANY mainstream music streaming services.
-              <br /><br />
-              The production of this song alone makes this track worth plentiful
-              praise, but what sets it apart from all the other amazing tracks
-              on this mixtape is the attractive story-telling within. I'm not
-              going to outline the story here, you can perceive it for yourself,
-              but take notes of it while appreciating the equally impressive
-              production. If you need more of this mixtape, I will put a link to
-              my favorite place to listen to it (it is very good), but mind the
-              disclaimer, it truly is a slippery slope.<a
-                href="https://mixtapemonkey.com/54/frank-ocean-nostalgia-ultra"
-                target="_blank"
-                ><h3><center>Nostalgia Ultra Mixtape</center></h3></a
-              >
+              The production of N.E.R.D's album from which this track originates
+              is powerful and upbeat. This song's chorus gets repetitive (I
+              listen to the song on repeat for the full duration of writing my
+              review), but the verses on this track are really exciting and it's
+              a lovely song to just throw on when you are going about your day.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Ayla: Me vs. The World - Rod Wave
+            Zoe Campion: Pancakes for Dinner - Lizzy McAlpine
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.0/10</h2>
+              <h2 id="rating">Overall Rating: 8.5/10</h2>
             </div>
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/2DgUMMxXxWbCxEK55KUIfx?si=052d31cf2cb24c72"
+                href="https://open.spotify.com/track/4HffeEF97c6UxNePgbuECW?si=4d39c9eb9406460b"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=UXHkn9rx4Xk"
+                href="https://www.youtube.com/watch?v=5rIH5Akx6zI"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
@@ -422,11 +409,14 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Although this artist might not fit the usual taste of mine, his
-            vocals and lyricism have had me hooked for weeks. This song
-            describes Rod Wave’s experience in gang life and how he has used
-            music to escape. His lyrics and flow carry the heavy subject matter
-            beautifully. I hope you’ll enjoy this song as much as I have :)
+            I listened to this song flying into Oakland and cried, because for
+            some reason tears are my natural impulse on landing planes. Lizzy
+            McAlpine’s lyrics speak to insecurities so poignantly, sometimes I
+            feel like she’s reading my mind. The gentle instrumentals really
+            accentuate her lyricism, and the crescendo during the bridge matches
+            the emotional swell. Despite being a bit fatalistic, the sentiment
+            is cute. Very much a woodsy vibe, so listening takes me back to
+            being in northern Minnesota.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -476,6 +466,11 @@
               <td>8</td>
               <td>Unbothered - Omar Apollo</td>
               <td>8.2/10</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Songs for Women - Frank Ocean</td>
+              <td>9.4/10</td>
             </tr>
           </table>
         </div>
