moved external css

--- a/pics.html
+++ b/pics.html
@@ -3,117 +3,16 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Jaymes Garbe: Pics</title>
-    <style>
-      body {
-        background: top center fixed #3a606e;
-        font-family: Georgia, serif;
-        font-size: 15px;
-      }
-
-      #wrapper {
-        width: 780px;
-        margin: 60px auto;
-      }
-
-      #main {
-        width: 600px;
-        background: whitesmoke;
-        padding: 6px;
-        padding-bottom: 5px;
-        border: 4px solid #d4cb92;
-      }
-
-      #sidenav {
-        float: right;
-        width: 135px;
-        background-color: whitesmoke;
-        border: 4px solid #d4cb92;
-      }
-
-      #sidenav ul {
-        margin: 0;
-        padding: 0;
-      }
-
-      #sidenav ul li {
-        list-style-type: none;
-        display: inline;
-      }
-
-      #sidenav li a {
-        display: block;
-        padding: 5px 10px;
-        color: black;
-        text-decoration: none;
-        border-bottom: 4px solid #80a4ed;
-        font-weight: bold;
-      }
-
-      #sidenav li a:hover {
-        background: #80a4ed;
-      }
-
-      td {
-        vertical-align: top;
-      }
-
-      .divider {
-        font-weight: bold;
-        font-size: large;
-        background-color: #80a4ed;
-        margin-top: 20px;
-        margin-bottom: 10px;
-        padding: 3px;
-        padding-left: 6px;
-      }
-
-      .inner {
-        padding-left: 15px;
-      }
-
-      li {
-        margin-top: 15px;
-      }
-
-      ul {
-        -webkit-padding-start: 20px;
-      }
-
-      dt {
-        margin-top: 15px;
-        font-weight: 700;
-      }
-
-      dd {
-        margin-top: 10px;
-      }
-
-      .thumbnail {
-        width: 115px;
-        float: right;
-        margin: 5px;
-      }
-
-      .title {
-        font-weight: bold;
-      }
-      h1 {
-        text-align: center;
-      }
-      img {
-        margin: 10px;
-        border: 4px solid #80a4ed;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WR2HL3LG91"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-    gtag('config', 'G-WR2HL3LG91');
+    gtag("config", "G-WR2HL3LG91");
   </script>
   <body>
     <div id="wrapper">
