--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 10: Rollinem 7's - N.E.R.D
+          Week 11: Bound - The Ponderosa Twins Plus One
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -31,15 +31,15 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.4/10</h2>
+            <h2 id="rating">Overall Rating: 8.1/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/5hIg7J1i50XLG7bPKQM6O5?si=1355b0c750e847ee"
+              href="https://open.spotify.com/track/0AqE2nClzllWavHbkC2AeZ?si=f8df9b0ef9e34832"
               target="_blank"
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=poMoJP0TPeg"
+              href="https://www.youtube.com/watch?v=d6mGHwHMB5s"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
@@ -90,39 +90,39 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Both of Pharrell's short verses break up the overly repetitive
-              chorus in a way that makes this song as enjoyable as it is. I also
-              thoroughly enjoy the anomalous nature of Andre 3000's finishing
-              verse.
+              The incredible vocalization of these high school boys astounds me.
+              The sweet and simple harmonics create such a gleeful energy that
+              carries throughout.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              The production of N.E.R.D's album from which this track originates
-              is powerful and upbeat. This song's chorus gets repetitive (I
-              listen to the song on repeat for the full duration of writing my
-              review), but the verses on this track are really exciting and it's
-              a lovely song to just throw on when you are going about your day.
+              This song was popularized by the two extremely popular samplings
+              "Bound 2" and "A BOY IS A GUN*" by Kanye West and Tyler, the
+              Creator respectively. It's an uncomplicated love song by this
+              group of highschool boys (two sets of twins "plus one"
+              interestingly). Indulge in this song if you need a bit of
+              simplicity in your life.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Zoe Campion: Pancakes for Dinner - Lizzy McAlpine
+            Matt C: Elephant - Jason Isbell and the 400 Unit
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 8.5/10</h2>
+              <h2 id="rating">Overall Rating: 10/10</h2>
             </div>
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/4HffeEF97c6UxNePgbuECW?si=4d39c9eb9406460b"
+                href="https://open.spotify.com/track/5hDrVjYuVbJ00KfzbrwtXa?si=a667decdcfa947ac"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=5rIH5Akx6zI"
+                href="https://www.youtube.com/watch?v=pbgk4tTJEH8"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
@@ -130,14 +130,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I listened to this song flying into Oakland and cried, because for
-            some reason tears are my natural impulse on landing planes. Lizzy
-            McAlpine’s lyrics speak to insecurities so poignantly, sometimes I
-            feel like she’s reading my mind. The gentle instrumentals really
-            accentuate her lyricism, and the crescendo during the bridge matches
-            the emotional swell. Despite being a bit fatalistic, the sentiment
-            is cute. Very much a woodsy vibe, so listening takes me back to
-            being in northern Minnesota.
+            Jason Isbell is a story teller. His songs conjure emotion and vivid
+            reflections of what it is to be human. Elephant is one woman’s story
+            battling terminal cancer and Jason’s lyrical genius is on full
+            display. The song is sad, funny, sweet and even a little sexy. His
+            guitar playing perfectly matches the underlying melancholy of the
+            story and never fails to bring a lump to my throat and often more
+            than a few tears to my eyes.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -192,6 +191,11 @@
               <td>9</td>
               <td>Songs for Women - Frank Ocean</td>
               <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Rollinem 7's - N.E.R.D</td>
+              <td>7.4/10</td>
             </tr>
           </table>
         </div>
